k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: <DOCKER_HUB_USERNAME>/auth-service:<GIT_COMMIT_SHA>
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: auth-service
