k8s/cart-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: <DOCKER_HUB_USERNAME>/cart-service:<GIT_COMMIT_SHA>
        ports:
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  ports:
  - port: 5005
    targetPort: 5005
  selector:
    app: cart-service
