k8s/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: <DOCKER_HUB_USERNAME>/order-service:<GIT_COMMIT_SHA>
        ports:
        - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
  - port: 5006
    targetPort: 5006
  selector:
    app: order-service
